VT-3104 - fix spacing between accordions/vrtx-grouped in how-to-search document (special case)

--- a/src/main/resources/web/themes/default/structured-resources/editor.css
+++ b/src/main/resources/web/themes/default/structured-resources/editor.css
@@ -172,6 +172,10 @@
 
 /* Study enhancements */
 
+#editor.vrtx-hvordan-soke .vrtx-grouped {
+  margin-top: 0px;
+}
+
 #editor.so .internasjonale-sokere-admin,
 #editor.so .nordiske-sokere,
 #editor.so .generelle-admin,
